Removed form action

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,10 @@
  <body>
  <p></p>
 
+<!-- 
 <form method="post" action="/admins1" class="form_login">
+-->
+<form class="form_login">
      <select name="loginType">    
       <option value="user" name="user">Login as User</option>
       <option value="admin" name="admin">Login as Admin</option>
