Adds id of user who created award to awards table

--- a/views/award.hbs
+++ b/views/award.hbs
@@ -3,5 +3,6 @@
 <div>Award ID: {{award.id}}</div>
 <div>Recipient Name: {{award.recipient_name}}</div>
 <div>Recipient Email: {{award.recipient_email}}</div>
-<div>Creation Time: {{award.creation_time}}</div>
+<div>Creation Time: {{createdTime}}</div>
 <div>Award Type: {{award.award_type}}</div>
+<div>Created By: {{creator.name}} - {{creator.email}}</div>
