--- a/views/create_award.hbs
+++ b/views/create_award.hbs
@@ -4,9 +4,9 @@
   <div class="form-group">
     <label>Type</label>
     <select class="form-control" name="type">
-      <option value="1">Weekly</option>
-      <option value="2">Monthly</option>
-      <option value="3">Yearly</option>
+      <option value="weekly">Weekly</option>
+      <option value="monthly">Monthly</option>
+      <option value="yearly">Yearly</option>
     </select>
   </div>
   <div class="form-group">
