added more BI functioning and export csv

--- a/views/adminProfile.hbs
+++ b/views/adminProfile.hbs
@@ -20,7 +20,7 @@
              <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
 	   </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">BI Reports</a>
+             <a class="nav-link" href="/businessIntelligence">BI Reports</a>
            </li>
    
          </ul>
