--- a/views/accountsMain.hbs
+++ b/views/accountsMain.hbs
@@ -20,7 +20,7 @@
              <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
 	   </li>
            <li class="nav-item" >
-             <a class="nav-link" href="#">BI Reports</a>
+             <a class="nav-link" href="/businessIntelligence">BI Reports</a>
            </li>
    
          </ul>
@@ -38,40 +38,31 @@
                     Admins<span class="sr-only">(current)</span>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/getAllUsers">
-                    Users
-                  </a>
+                <li class="nav-item"><a class="nav-link" href="/getAllUsers">Users </a>
                 </li>
-                
               </ul>
-
-          
             </div>
           </nav>
-  
           <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
          {{#if admins}}
          <form method="get" action="/addAdmin" >
 	      	  <input id="addUser" type="submit" name="addUser" value="+ Add" /></form>
 	 {{/if}}
 	 {{#if users}}
-	          <form method="get" action="/addUser" >
-	 	      	  <input id="addUser" type="submit" name="addUser" value="+ Add" /></form>
+	        <form method="get" action="/addUser" >
+		<input id="addUser" type="submit" name="addUser" value="+ Add" /></form>
 	 {{/if}}
-	     <div style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-          	                  
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-	   	    <h1 class="h2"></h1>
-	   	           <div class="btn-toolbar mb-2 mb-md-0">
-	   	           <div class="btn-group mr-2">
-				</div>
+         <div style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
+         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+         <h1 class="h2"></h1>
+         <div class="btn-toolbar mb-2 mb-md-0">
+         <div class="btn-group mr-2">
+	</div>
             </div>           
             <div class="table-responsive-sm">
              {{#if admins}}
               <table class="table table-sm">
-             
-	              <thead class="thead-light">
+	       <thead class="thead-light">
                   <tr>
                     <th>ID</th>
                     <th>Email</th>
@@ -83,7 +74,6 @@
                 </thead>
                 <tbody>
                 {{#each admins}}
-                
 		   <tr>
 		     <form method="post" action="/editAdmins" >
 		   <td>{{this.id}}<input type="hidden" name="id" id="id" value="{{this.id}}" ></td>
@@ -137,28 +127,8 @@
           </main>
         </div>
       </div>
-  
-      <!-- Bootstrap core JavaScript
-      ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
+
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="../../assets/js/vendor/popper.min.js"></script>
-      <script src="../../dist/js/bootstrap.min.js"></script>
-  
-
-    
-  
-  <script>
-  
-  </script>
-
-
-
-
-  </body>
-  
-
-  
+</body>
 </html>
-
