--- a/views/businessIntelligence.hbs
+++ b/views/businessIntelligence.hbs
@@ -1,2 +1,294 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+  </script>  
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+</script>
+   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      <script type="text/javascript">
+        google.charts.load('current', {'packages':['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+        google.charts.load('current', {'packages':['orgchart']});
+        google.charts.setOnLoadCallback(drawChart2);
+ 	
+        function drawChart() {
+        var g = new Array();
+        g.push([]);
+        g[0][0] = "something";
+	g[0][1] = "else";
+        var da = {{{myJSON}}};
+        for(var i = 1; i <= da.length; i ++){
+       		g.push([]);
+	        g[i][0] = da[i-1][0];
+		g[i][1] = da[i-1][1];
+        }
+        var data = google.visualization.arrayToDataTable(g);
+        var options = {
+           title: ''
+        };
+  
+          var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+  
+          chart.draw(data, options);
+      }
+      
+      
+      function drawChart2() {
+	var da = {{{myJSON}}};
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Name');
+        data.addColumn('string', 'Manager');
+        data.addColumn('string', 'ToolTip');
+        var p = 'Admin:';
+        var q = p + da[0][2].toString();
+        data.addRow([q,'', '']);
+        for(var i = 0; i < da.length; i ++){
+           data.addRow([da[i][1], q, '']); 
+        }
+        // Create the chart.
+        var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
+        // Draw the chart, setting the allowHtml option to true for the tooltips.
+        chart.draw(data, {allowHtml:true});
+      }
+   </script>
+  <link href="../starter-template.css" rel="stylesheet">
+ </head>
+
 <body>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
+    <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item" >
+          <a class="nav-link" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" >
+          <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active" >
+          <a class="nav-link" href="/businessIntelligence">BI Reports</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <h3>{{{title}}}</h3>
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+          <form action="/businessIntelligence" method="post">
+
+              <div class="bs-example">
+	          <div class="panel-group" id="accordion">
+	              <div class="panel panel-default">
+	                 <div class="panel-heading">
+	                    <h5 class="panel-title">
+			       <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+			         <span class="glyphicon glyphicon-plus"></span> Admins</a>
+			    </h5>
+			</div>
+			<div id="collapseOne" class="panel-collapse collapse">
+			<div class="panel-body">
+			<input type="radio" name="adminRadio" value="allAdmins"> All Admin <br>
+			<input type="radio" name="adminRadio" value="adminId"> Admin ID = <input type="text" name="adminIdText" /><br>
+			</div>
+	                </div>
+	              </div>
+	              <div class="panel panel-default">
+	                  <div class="panel-heading">
+                          <h5 class="panel-title">
+                             <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-plus"></span> Users </a>
+                         </h5>
+     	                  </div>
+     	                  <div id="collapseTwo" class="panel-collapse collapse">
+     	                      <div class="panel-body">
+    	                            <input type="radio" name="userRadio" value="allUsers" > All Users <br>
+      				    <input type="radio" name="userRadio" value="userId"> User ID = <input type="text" name="userIdText" /><br>
+	                      </div>
+                          </div>
+                       </div>
+	              <div class="panel panel-default">
+	                  <div class="panel-heading">
+	                      <h5 class="panel-title">
+	                          <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-plus"></span> Awards</a>
+	                      </h5>
+	                  </div>
+	                  <div id="collapseThree" class="panel-collapse collapse">
+	                      <div class="panel-body">
+				     <input type="radio" name="awardRadio" value="allAwards"> All Awards <br>
+				    <input type="radio" name="awardRadio" value="awardId"> Award ID = <input type="text" name="awardIdText" /><br>
+				    <input type="radio" name="awardRadio" value="awardType"> Award type = <input type="text" name="awardTypeText" /><br>
+				  </div>
+	                  </div>
+	              </div>
+	          </div>
+     		 <input type="submit" id="generateReport" value="Generate Report"> 
+     		 <div>OR</div>
+     		 <input type="submit" id="exportToCsv" name="exportToCSV" value="Export to CSV file">
+
+	<a class="nav-link" href="/businessIntelligence">Reset Form</a>
+	</form>
+	</div>
+        </li>
+          </ul>
+        </div>
+      </nav>
+      <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
+        <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
+          <div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
+            <div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
+          </div>
+          <div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
+            <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+          <h1 class="h2"></h1>
+          <div class="btn-toolbar mb-2 mb-md-0">
+          </div>
+        </div>
+        <h5 >{{{exportCSV}}}</h5>
+        {{{searchtitle}}}
+      
+    {{#if users}}
+    <div id="chart_div" ></div>{{/if}}
+    {{#if admins}}
+    <div id="piechart"></div>
+        {{/if}} 
+        {{#if awards}}
+        <div id="piechart"></div>
+        {{/if}} 
+        {{#if admins}}
+ 	<h4>Admins:</h4>
+        <div class="table">
+         <table class="table table-striped table-sm">
+           <thead>
+             <tr>
+               <th>ID</th>
+               <th>Email</th>
+               <th>Login Attempts</th>
+               </tr>
+           </thead>
+           <tbody>
+           {{#each admins}}
+             <tr>
+               <td>{{this.id}}</td>
+               <td>{{this.email}}</td>
+               <td>{{this.login_attempts}}</td>
+             </tr>
+           {{/each}}
+           </tbody>
+          </table>{{/if}}
+	          
+    {{#if usersAndAwards}} 
+    <h4>Awards Created by Users:</h4>
+       <div class="table">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Recipient Name</th>
+                <th>Recipient Email</th>
+                <th>Creation Time</th>
+                <th>Award Type</th>
+                <th>Creator ID</th>
+              </tr>
+            </thead>
+            <tbody>
+            {{#each usersAndAwards}}
+              <tr>
+                <td>{{this.id}}</td>
+                <td>{{this.recipient_name}}</td>
+                <td>{{this.recipient_email}}</td>
+                <td>{{this.creation_time}}</td>
+         	<td>{{this.award_type}}</td>
+        	<td>{{this.creator_id}}</td>
+              </tr>
+            {{/each}}
+            </tbody>
+           </table>{{/if}}
+        
+        {{#if users}} 
+	<h4>Users:</h4>
+        <div class="table">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Region</th>
+                <th>Last Login</th>
+                <th>Login Attempts</th>
+                <th>Signature</th>
+                <th>Creation Time</th>
+		<th>Creator ID</th>
+                
+              </tr>
+            </thead>
+            <tbody>
+            {{#each users}}
+              <tr>
+                <td>{{this.id}}</td>
+                <td>{{this.name}}</td>
+                <td>{{this.email}}</td>
+                <td>{{this.password}}</td>
+                <td>{{this.region}}</td>
+                <td>{{this.last_login}}</td>
+                <td>{{this.login_attempts}}</td>
+                <td>{{this.sig_image}}</td>
+                <td>{{this.creation_time}}</td>
+                <td>{{this.creator_id}}</td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>{{/if}}
+         
+        {{#if awards}} 
+	<h4>Awards:</h4>
+	<div class="table">
+	<table class="table table-striped table-sm">
+	<thead>
+	  <tr>
+   	   <th>ID</th>
+	   <th>Recipient Name</th>
+	   <th>Recipient Email</th>
+	   <th>Creation Time</th>
+	   <th>Award Type</th>
+	   <th>Creator ID</th>
+	  </tr>
+	</thead>
+	<tbody>
+	{{#each awards}}
+	<tr>
+	   <td>{{this.id}}</td>
+	   <td>{{this.recipient_name}}</td>
+	   <td>{{this.recipient_email}}</td>
+	   <td>{{this.creation_time}}</td>
+	   <td>{{this.award_type}}</td>
+	   <td>{{this.creator_id}}</td>
+	</tr>
+	{{/each}}
+	</tbody>
+	</table>{{/if}}
+	</div>
+	</div></div>
+        </div>
+      </main>
+    </div>
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+  </script> 
+  <script>
+    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+  </script> 
 </body>
+</html>
