--- a/views/possibleBIPage.hbs
+++ b/views/possibleBIPage.hbs
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/adminMain">Accounts <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" id="hideMe3">
-          <a class="nav-link" href="#">BI Reports</a>
+          <a class="nav-link" href="/businessIntelligence">BI Reports</a>
         </li>
       </ul>
     </div>
