Adds ability to upload user signature image, ability to delete all user awards, clean up navigation of user pages

--- a/views/award.hbs
+++ b/views/award.hbs
@@ -6,3 +6,6 @@
 <div>Creation Time: {{createdTime}}</div>
 <div>Award Type: {{award.award_type}}</div>
 <div>Created By: {{creator.name}} - {{creator.email}}</div>
+<br>
+<br>
+<a href="/user_dashboard" class="btn btn-outline-secondary" role="button">Return To User Dashboard</a>
