--- a/views/create_award.hbs
+++ b/views/create_award.hbs
@@ -1,3 +1,4 @@
+<a href="/user_dashboard" class="btn btn-outline-secondary" role="button">Return To User Dashboard</a>
 <h1>Create Award</h1>
 <p>Please enter award details</p>
 <form action="/create_award" method="post">
