--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -6,3 +6,8 @@
 <div>
   <a href="/edit_profile">Edit Profile</a>
 </div>
+<div>
+  <br>
+  <br>
+  <a href="/logout" class="btn btn-outline-secondary" role="button">Logout</a>
+<div>
