--- a/views/create_award.hbs
+++ b/views/create_award.hbs
@@ -4,9 +4,9 @@
   <div class="form-group">
     <label>Type</label>
     <select class="form-control" name="type">
-      <option value="weekly">Weekly</option>
-      <option value="monthly">Monthly</option>
-      <option value="yearly">Yearly</option>
+      <option value="week">Week</option>
+      <option value="month">Month</option>
+      <option value="year">Year</option>
     </select>
   </div>
   <div class="form-group">
