--- a/views/accountsMain.hbs
+++ b/views/accountsMain.hbs
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+     <meta content="width=device-width, initial-scale=1" name="viewport">
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link href="../starter-template.css" rel="stylesheet">
-    
   </head>
   <body overflow="hidden">
-     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" *ngIf="!showNav">
-       <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
-       <button class="navbar-toggler" id="hideMe5" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" Id="navbarNavDropdown">
-         <ul class="navbar-nav">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
+    <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav">
            <li class="nav-item " >
              <a class="nav-link" href="/adminProfile">My Profile</a>
            </li>
@@ -25,6 +26,8 @@
    
          </ul>
        </div>
+                     <a href="/logout" >Sign out</a>
+
 </nav>
   
       <div class="container-fluid" >
@@ -43,15 +46,26 @@
               </ul>
             </div>
           </nav>
-          <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-         {{#if admins}}
+          
+          
+          
+          
+ <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <div class="btn-toolbar mb-2 mb-md-0">
+            {{#if admins}}
+         
+         
          <form method="get" action="/addAdmin" >
-	      	  <input id="addUser" type="submit" name="addUser" value="+ Add" /></form>
+	      	  <button id="addAdmin" type="submit" name="addAdmin" value="+ Add" class="btn btn-sm btn-outline-secondary" name="exportButton" id="exportButton" >+ Add</button>
+	      	  </form>
 	 {{/if}}
 	 {{#if users}}
 	        <form method="get" action="/addUser" >
-		<input id="addUser" type="submit" name="addUser" value="+ Add" /></form>
+		<button id="addUser" type="submit" name="addUser" value="+ Add" class="btn btn-sm btn-outline-secondary"/>+ Add </button></form>
 	 {{/if}}
+	 </div>
+	 </div>
          <div style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
          <h1 class="h2"></h1>
