--- a/views/adminProfile.hbs
+++ b/views/adminProfile.hbs
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="../starter-template.css" rel="stylesheet">
+<meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      <link href="../starter-template.css" rel="stylesheet">
     
   </head>
   <body>
-     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" *ngIf="!showNav">
-       <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" Id="navbarNavDropdown">
+   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
+      <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+   
          <ul class="navbar-nav">
            <li class="nav-item active" >
              <a class="nav-link" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
@@ -25,16 +28,18 @@
    
          </ul>
        </div>
+                     <a href="/logout" >Sign out</a>
+
 </nav>
   
       <div class="container-fluid" >
         <div class="row">
-          <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+          <nav class="col-md-2 d-none d-md-block bg-light sidebar" id="sidenav">
           <h2>{{{title}}}</h2>
           </nav>
   
           <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"> 
-                     
+              <p>Hello, {{{admin.email}}}</p>       
               <div class="table-responsive">
                   {{#if admin}}
 	          <table class="table">
@@ -52,7 +57,7 @@
 	                  <tr>
 	                     <form method="post" action="/adminProfile" >
 	                      <td>{{admin.id}}<input type="hidden" name="id" id="id" value="{{admin.id}}"></td>
-	                      <td><input type="text" name="email" id="email" placeholder="{{admin.email}}" ></td>
+	                      <td><input type="text" name="email" id="email" value="{{admin.email}}" ></td>
 	                      <td>{{admin.last_login}}</td>
 	                      <td>{{admin.login_attempts}}</td>
 	                      <td>{{admin.creation_time}}</td>
