--- a/views/businessIntelligence.hbs
+++ b/views/businessIntelligence.hbs
@@ -3,31 +3,45 @@
 <head>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-  </script>  
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-</script>
-   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-      <script type="text/javascript">
-        google.charts.load('current', {'packages':['corechart']});
-        google.charts.setOnLoadCallback(drawChart);
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript">
+       if({{{myJSON2}}} != 0){ google.charts.load('current', {'packages':['corechart']});
+        google.charts.setOnLoadCallback(drawChart);}
+        if({{{myJSONorgchart}}} != 0){
         google.charts.load('current', {'packages':['orgchart']});
-        google.charts.setOnLoadCallback(drawChart2);
- 	
+        google.charts.setOnLoadCallback(drawChart2);}
+        if({{{myJSON}}} != 0){
+        google.charts.load('current', {'packages': ['corechart', 'bar']});
+        google.charts.setOnLoadCallback(drawChart3);}
+
+	//PIE CHART
         function drawChart() {
         var g = new Array();
         g.push([]);
         g[0][0] = "something";
 	g[0][1] = "else";
-        var da = {{{myJSON}}};
-        for(var i = 1; i <= da.length; i ++){
-       		g.push([]);
-	        g[i][0] = da[i-1][0];
-		g[i][1] = da[i-1][1];
+	
+        var da = {{{myJSON2}}};
+        if(da.length == 1){
+        	g.push([]);
+	        g[1][0] = da[0][0];
+		g[1][1] = da[0][1];
+        }
+        else{
+        	for(var i = 1; i <= da.length; i++){
+       			g.push([]);
+		        g[i][0] = da[i-1][0];
+			g[i][1] = da[i-1][1];
+        	}
         }
         var data = google.visualization.arrayToDataTable(g);
         var options = {
-           title: ''
+           title: '',
+            height: 300,
+               width: 450,
+           
         };
   
           var chart = new google.visualization.PieChart(document.getElementById('piechart'));
@@ -35,9 +49,9 @@
           chart.draw(data, options);
       }
       
-      
+      //ORGANIZATION CHART
       function drawChart2() {
-	var da = {{{myJSON}}};
+	var da = {{{myJSONorgchart}}};
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'Name');
         data.addColumn('string', 'Manager');
@@ -53,6 +67,58 @@
         // Draw the chart, setting the allowHtml option to true for the tooltips.
         chart.draw(data, {allowHtml:true});
       }
+      
+      //TIMELINE
+      function drawChart3() {
+             var g = new Array();
+	     g.push([]);
+	     g[0][0] = "Date";
+	     g[0][1] = "# Created";
+	     var da = {{{myJSON}}};
+	     var min = 99999999999999999;
+	     var max = -1;
+	     for(var i = 1; i <= da.length; i ++){
+		g.push([]);
+		if(min > da[i-1][1]){
+			min = da[i-1][1];
+		}
+		if(max < da[i-1][1]){
+			max = da[i-1][1];
+		}
+	        g[i][0] = da[i-1][0];
+	     	g[i][1] = da[i-1][1];
+             }
+	     var data = google.visualization.arrayToDataTable(g);
+             var options = {
+            //   title: '{{{chartTitle}}}',
+               height: 300,
+               width: 450,
+	       chartArea: {
+		      // allow 70px for hAxis title and ticks
+		      height: 200,
+
+		      // allow 200px for vAxis title and ticks
+		      left: 200,
+		      // allow 50px for chart title
+		      top: 25,
+
+		      // allow 200px for legend on right
+		      width: 250
+	    	},               
+		  hAxis: {
+                  ticks: [0, 1, 2, 3, 4, 5], 
+               	  format: '0',
+               	  title: 'number created'
+               },
+               vAxis: {
+                  title: 'date',
+                  
+               }
+             };
+             var chart = new google.visualization.BarChart(document.getElementById('chart_div_time'));
+             chart.draw(data, options);
+       }
+      
    </script>
   <link href="../starter-template.css" rel="stylesheet">
  </head>
@@ -60,7 +126,7 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
-    <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+    <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item" >
@@ -72,10 +138,12 @@
         <li class="nav-item active" >
           <a class="nav-link" href="/businessIntelligence">BI Reports</a>
         </li>
+          
       </ul>
     </div>
+              <a href="/logout" >Sign out</a>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid" s>
     <div class="row">
       <nav class="col-md-2 d-none d-md-block bg-light sidebar">
         <h3>{{{title}}}</h3>
@@ -88,50 +156,48 @@
 	          <div class="panel-group" id="accordion">
 	              <div class="panel panel-default">
 	                 <div class="panel-heading">
-	                    <h5 class="panel-title">
+	                    <a class="panel-title">
 			       <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 			         <span class="glyphicon glyphicon-plus"></span> Admins</a>
-			    </h5>
+			    </a>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse">
-			<div class="panel-body">
-			<input type="radio" name="adminRadio" value="allAdmins"> All Admin <br>
+			<div class="panel-body" id="panel-body" name="panel-body">
+			<input type="radio" name="adminRadio" value="allAdmins"> All Admins <br>
 			<input type="radio" name="adminRadio" value="adminId"> Admin ID = <input type="text" name="adminIdText" /><br>
 			</div>
 	                </div>
 	              </div>
 	              <div class="panel panel-default">
 	                  <div class="panel-heading">
-                          <h5 class="panel-title">
+                          <a class="panel-title">
                              <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-plus"></span> Users </a>
-                         </h5>
+                         </a>
      	                  </div>
      	                  <div id="collapseTwo" class="panel-collapse collapse">
-     	                      <div class="panel-body">
-    	                            <input type="radio" name="userRadio" value="allUsers" > All Users <br>
-      				    <input type="radio" name="userRadio" value="userId"> User ID = <input type="text" name="userIdText" /><br>
+     	                      <div class="panel-body" id="panel-body" name="panel-body">
+    	                            <input type="radio" name="userRadio" value="allUsers"/ > All Users <br>
+      			 <input type="radio" name="userRadio" value="userId"/> User ID = <input type="text" id="userIdText" name="userIdText" /><br>
 	                      </div>
                           </div>
                        </div>
 	              <div class="panel panel-default">
 	                  <div class="panel-heading">
-	                      <h5 class="panel-title">
+	                      <a class="panel-title">
 	                          <a id="sidebar" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-plus"></span> Awards</a>
-	                      </h5>
+	                      </a>
 	                  </div>
 	                  <div id="collapseThree" class="panel-collapse collapse">
-	                      <div class="panel-body">
+	                      <div class="panel-body" id="panel-body" name="panel-body">
 				     <input type="radio" name="awardRadio" value="allAwards"> All Awards <br>
 				    <input type="radio" name="awardRadio" value="awardId"> Award ID = <input type="text" name="awardIdText" /><br>
-				    <input type="radio" name="awardRadio" value="awardType"> Award type = <input type="text" name="awardTypeText" /><br>
 				  </div>
 	                  </div>
 	              </div>
 	          </div>
-     		 <input type="submit" id="generateReport" value="Generate Report"> 
-     		 <div>OR</div>
-     		 <input type="submit" id="exportToCsv" name="exportToCSV" value="Export to CSV file">
-
+	          <div><br>
+     		 <button type="submit" id="generateReport" name="generateReport" value="Generate Report" >Generate Report</button> 
+</div>
 	<a class="nav-link" href="/businessIntelligence">Reset Form</a>
 	</form>
 	</div>
@@ -139,31 +205,51 @@
           </ul>
         </div>
       </nav>
-      <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
-        <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
-          <div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-            <div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
-          </div>
-          <div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-            <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
-          </div>
-        </div>
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-          <h1 class="h2"></h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-          </div>
-        </div>
-        <h5 >{{{exportCSV}}}</h5>
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+                  <h1 class="h2">Dashboard</h1>
+            <div class="btn-toolbar mb-2 mb-md-0">
+            {{#if chartTitle}}
+                <form method="post" action="/businessIntelligence">
+                   <input type="hidden" name="thisReport" id="thisReport" value="{{{thisReport}}}" />
+		   <button type="submit" class="btn btn-sm btn-outline-secondary" name="exportButton" id="exportButton">Export</button>
+                </form>
+		{{/if}}
+	     </div>
+              
+            </div>
+            
+        
+        <h5 >{{{exportCSV}}} </h5>
         {{{searchtitle}}}
-      
-    {{#if users}}
-    <div id="chart_div" ></div>{{/if}}
-    {{#if admins}}
-    <div id="piechart"></div>
-        {{/if}} 
-        {{#if awards}}
-        <div id="piechart"></div>
-        {{/if}} 
+       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+	{{#if chartTitle}}
+          <div class="bg-light mr-md-1 pt-1 px-1 pt-md-1 px-md-1 text-center overflow-hidden">
+              <div class="my-1 py-1">
+              <div id="chart_div_time" name="chart_div_time" class="chart_div_time" ></div>
+
+                <p class="lead">{{{chartTitle}}}</p>
+              </div>
+            </div>
+            {{/if}}
+            {{#if chartTitle2}}
+            <div class="bg-light mr-md-1 pt-1 px-1 pt-md-1 px-md-1 text-center overflow-hidden">
+              <div class="my-1 p-1">
+         <div id="piechart" ></div>
+                                 <div id="chart_div" ></div>
+
+
+                <p class="lead">{{{chartTitle2}}}</p>
+              </div>
+            </div>
+                {{/if}}
+
+    </div>
+                        <div id="chart_div" ></div>
+
+                    <div id="chart_div_time" ></div>
+         <div id="piechart" ></div>
+
         {{#if admins}}
  	<h4>Admins:</h4>
         <div class="table">
@@ -172,7 +258,11 @@
              <tr>
                <th>ID</th>
                <th>Email</th>
-               <th>Login Attempts</th>
+               <th>Login Attempts</th> 
+               <th>Last Login</th>
+               <th>Creation Time</th>
+               <th>Creator ID</th>
+
                </tr>
            </thead>
            <tbody>
@@ -181,7 +271,10 @@
                <td>{{this.id}}</td>
                <td>{{this.email}}</td>
                <td>{{this.login_attempts}}</td>
-             </tr>
+               <td>{{this.last_login}}</td>
+               <td>{{this.creation_time}}</td>
+               <td>{{this.creator_id}}</td>
+            </tr>
            {{/each}}
            </tbody>
           </table>{{/if}}
