--- a/views/layoutAccounts.hbs
+++ b/views/layoutAccounts.hbs
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link href="../starter-template.css" rel="stylesheet">
     
   </head>
   <body overflow="hidden">
      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" *ngIf="!showNav">
        <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
-       <button class="navbar-toggler" id="hideMe5" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+       <button class="navbar-toggler" id="hideMe5" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" Id="navbarNavDropdown">
@@ -25,6 +29,8 @@
    
          </ul>
        </div>
+                     <a href="/logout" >Sign out</a>
+
 </nav>
   
       <div class="container-fluid" >
