--- a/views/addAdmin.hbs
+++ b/views/addAdmin.hbs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta content="width=device-width, initial-scale=1" name="viewport">
-       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
-       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link href="../starter-template.css" rel="stylesheet">
+       <meta content="width=device-width, initial-scale=1" name="viewport">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+   	<link href="../starter-template.css" rel="stylesheet">
    </head>
    <body>
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" *ngIf="!showNav">
@@ -22,12 +24,12 @@
                <li class="nav-item active" >
                   <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
                </li>
-               <li class="nav-item" id="hideMe3">
+               <li class="nav-item" >
                   <a class="nav-link" href="/businessIntelligence">BI Reports</a>
                </li>
             </ul>
          </div>
-                       <a href="/logout" >Sign out</a>
+                       <a href="/logout" >Logout</a>
 
       </nav>
       <div class="container-fluid" >
@@ -36,12 +38,12 @@
             <h2>{{{title}}}</h2>
             <div class="sidebar-sticky">
                <ul class="nav flex-column">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                      <a id="hideAdmin" class="nav-link active" href="/getAllAdmins" value="Admins">
                      Admins<span class="sr-only">(current)</span>
                      </a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                      <a class="nav-link" href="/getAllUsers">
                      Users
                      </a>
@@ -61,32 +63,33 @@
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
                <h1 class="h2"></h1>
             </div>
+            
+            
             <div class="btn-toolbar mb-2 mb-md-0">
                <div class="btn-group mr-2">
-                  <div class="table-responsive">
-                     <table class="table table-striped table-sm">
-                        <thead>
+	           <div class="table-responsive-sm">
+	               <table class="table table-sm">
+	 	       <h4>Add Admin Account</h4>
+	 	       <thead class="thead-light"> 
                            <tr>
-                              <th>ID</th>
+                              <th>Name</th>
                               <th>Email</th>
-                              <th>Last Login</th>
-                              <th>Login Attempts</th>
-                              <th>Created</th>
-                              <th>Action</th>
+                              <th>Action</th><th></th>
                            </tr>
                         </thead>
                         <tbody>
-                           <tr>
-                              <form method="post" action="/addAdmin" >
-                                 <td>n/a</td>
-                                 <td><input type="text" id="email" name="email" placeholder="Enter email"/></td>
-                                 <td>n/a</td>
-                                 <td>n/a</td>
-                                 <td>n/a</td>
-                                 <td><input id="Save" type="submit" name="Save" value="Save" />
-                                    <input id="cancel" type="submit" name="Cancel" value="Cancel" />
+                           <tr> 
+                           <div class="form-group">
+                              <form method="post" action="/addUser" >
+                                 <td><input type="text" class="form-control" id="name" name="name" placeholder="Enter name"/></td>
+                                 <td><input type="text" class="form-control" id="email" name="email" placeholder="Enter email"/></td>
+				                              
+				
+                                 <td><input class="form-control" id="save" type="submit" name="save" value="Save" /></td>
+                                <td> <input class="form-control" id="cancel" type="submit" name="Cancel" value="Cancel" />
                                  </td>
                               </form>
+                              </div>
                            </tr>
                         </tbody>
                      </table>
@@ -100,6 +103,7 @@
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    
      
    </body>
 </html>
