--- a/views/adminProfile.hbs
+++ b/views/adminProfile.hbs
@@ -1,73 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-      <link href="../starter-template.css" rel="stylesheet">
-    
-  </head>
+         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    	<link href="../starter-template.css" rel="stylesheet">
+   </head>
   <body>
    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
-      <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-   
-         <ul class="navbar-nav">
-           <li class="nav-item active" >
-             <a class="nav-link" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
-           </li>
-           <li class="nav-item" >
-             <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
-	   </li>
-           <li class="nav-item">
-             <a class="nav-link" href="/businessIntelligence">BI Reports</a>
-           </li>
-   
-         </ul>
-       </div>
-                     <a href="/logout" >Sign out</a>
-
-</nav>
+     <a class="navbar-brand" href="#">Employee Recognition Awards System</a> 
+     <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+     <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav">
+         <li class="nav-item" >
+           <a class="nav-link active" href="/adminProfile">My Profile <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item" >
+           <a class="nav-link" href="/accountsMain">Accounts <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item" >
+           <a class="nav-link" href="/businessIntelligence">Business Intelligence</a>
+         </li>
+           
+       </ul>
+     </div>
+               <a href="/logout" >Logout</a>
+  </nav>
   
-      <div class="container-fluid" >
+     <div class="container-fluid" >
         <div class="row">
-          <nav class="col-md-2 d-none d-md-block bg-light sidebar" id="sidenav">
-          <h2>{{{title}}}</h2>
-          </nav>
-  
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                   <br> <h3>My Profile</h3>
+                    <div class="sidebar-sticky">
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                      <form action="/adminProfile" method="post">
+            
+                          <div class="bs-example">
+                          <div class="panel-group" id="accordion">
+                              <div class="panel panel-default">
+                                 <div class="panel-heading">
+                                    <a class="panel-title">
+                                       <button type="submit" name="edit" value="edit" class="btn-link">Edit</button>
+                                </a>
+                                </div>
+                        
+                          </div>
+                          
+                           </div>
+                    </div>
+                </form>
+                    </li>
+                      </ul>
+                    </div>
+      </nav>
           <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"> 
-              <p>Hello, {{{admin.email}}}</p>       
-              <div class="table-responsive">
-                  {{#if admin}}
-	          <table class="table">
-	              <thead class="thead-light">
-	                    <tr>
-	                      <th>ID</th>
-	                      <th>Email</th>
-	                      <th>Last Login</th>
-	                      <th>Login Attempts</th>
-	                      <th>Created</th>
-	                      <th>Action</th>
-	                    </tr>
-	              </thead>
-	              <tbody>
-	                  <tr>
-	                     <form method="post" action="/adminProfile" >
-	                      <td>{{admin.id}}<input type="hidden" name="id" id="id" value="{{admin.id}}"></td>
-	                      <td><input type="text" name="email" id="email" value="{{admin.email}}" ></td>
-	                      <td>{{admin.last_login}}</td>
-	                      <td>{{admin.login_attempts}}</td>
-	                      <td>{{admin.creation_time}}</td>
-	                      <td><input id="Save" type="submit" name="Save" value="Save" >
-	                      </form>
-	                 </tr>
-	               {{/if}}
-	               </tbody>
+     	 	       
+	 <div class="table-responsive-sm">
+               <table class="table table-sm">
+	 	       <thead class="thead-light"> 
+	 	       <tr>
+                          <th>ID</th>
+                          <Th>Name</th>
+                          <th>Email</th>
+                          <th>Last Login</th>
+                          <th>Login Attempts</th>
+                          <th>Created</th>
+                       {{#if edit}}<th>Action</th> {{/if}}
+                        </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                      <div class="form-group">
+                         <form method="post" action="/adminProfile" >
+                          {{#if edit}}
+                          <td>{{admin.id}}<input class="form-control" type="hidden" name="id" id="id" value="{{admin.id}}"></td>
+                            <td><input type="text" class="form-control" name="name" id="name" value="{{admin.name}}" ></td>
+			    <td><input type="text" class="form-control" name="email" id="email" value="{{admin.email}}" ></td>
+                            <td>{{timeLL}}</td>
+                            <td>{{admin.login_attempts}}</td>
+                            <td>{{timeC}}</td>
+                            <td><input class="form-control" id="Save" type="submit" name="Save" value="Save" > 
+                           
+
+                          {{else}}
+                          {{#if admin}}
+                          <td>{{admin.id}}</td>
+                          <td>{{admin.name}}</td>
+                  	  <td>{{admin.email}}</td>
+                          <td>{{timeLL}}</td>
+                          <td>{{admin.login_attempts}}</td>
+                          <td>{{timeC}}</td>
+                          </form>
+                          </div>
+			{{/if}}
+			{{/if}}   </tr>
+
+                   </tbody>
               </table>
-              
+              </div>
               
           </main>
         </div>
